# -telegram-payment-bot

./: BUSINESS_SETUP.md  CLAUDE.md  COMMERCIAL_PROPOSAL.md  DEPLOYMENT_STATUS.md  DEVELOPMENT.md  FINAL_TEST_REPORT.md  LICENSE.md  Makefile  ONBOARDING_GUIDE.md  PAYMENT_TERMS.md  PRICING_ANALYSIS.md  PRIVACY_POLICY.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_STATUS.md  Procfile  README.md  SALES_PACKAGE.md  SERVICE_AGREEMENT.md  TEST_IMPROVEMENTS.md  TEST_REPORT.md  admin_interface.py  admin_utils.py  auth_middleware.py  client_manager.py  clients.json  config.py  encryption_manager.py  group_settings.json  group_settings.py  main.py  payment_parser.py  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  scheduler.py  security_validator.py  setup.cfg  simple_bot.py  simple_bot_no_auth.py  (+5 more)
