[metadata]
name = telegram-payment-bot
version = 1.0.0
description = Telegram bot for monitoring and parsing payment notifications
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
license_files = LICENSE.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.11
packages = find:
install_requires =
    python-telegram-bot>=20.0
    schedule==1.2.0
    python-dotenv==1.0.0
    cryptography>=41.0.0

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-asyncio>=0.21.0
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.5.0
    pre-commit>=3.3.0

[options.packages.find]
exclude =
    tests*
    docs*

[tool:pytest]
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
addopts = 
    -v
    --strict-markers
    --tb=short
    --cov=.
    --cov-report=term-missing:skip-covered
    --cov-report=html

[coverage:run]
source = .
omit = 
    */tests/*
    */venv/*
    */.venv/*
    */env/*
    setup.py
    */migrations/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod